Add logging and extract appname provider

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,7 +27,7 @@ jobs:
     #     password: ${{ secrets.DOCKER_HUB_PWD }}
     #     repository: asizikov/echo-api
     #     tag_with_ref: true
-    #     tag_with_sha: true
+    #     tag_with_sha: trueg
     #     path: src/Echo.Api
     #     add_git_labels: true
     # - name: Azure CLI Login
