--- a/src/Echo.Api/Dockerfile
+++ b/src/Echo.Api/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker pull mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /app
 EXPOSE 80
 
