--- a/src/Echo.Api/Properties/launchSettings.json
+++ b/src/Echo.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "Echo.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "echo?message=Hello+World",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
