--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,9 +20,16 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
-      
-    - name: Test
-      run: dotnet test --configuration Release --no-restore
+    
+    # run unit tests, save results and upload to github actions
+    - name: Run unit tests
+      run: dotnet test --configuration Release --no-restore --logger:"xunit;LogFilePath=./test-results.xml"
+    - name: Upload test results
+      uses: actions/upload-artifact@v1
+      with:
+        name: test-results
+        path: test-results.xml
+        target-path: test-results.xml
 
     - name: Build docker image
       run: docker build -t $GITHUB_REPOSITORY:$GITHUB_SHA -f src/Echo.Api/Dockerfile src/Echo.Api/    
