--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,3 +22,14 @@ jobs:
       run: dotnet build --configuration Release --no-restore
     - name: Test
       run: dotnet test --configuration Release --no-restore  
+    # run unit tests and upload test results to github actions
+    - name: Test and upload test results
+      run: dotnet test --configuration Release --no-restore --logger "xunit;LogFileName=test-results.xml"
+    # upload test results to github actions
+    - name: Upload test results
+      uses: actions/upload-artifact@v1
+      with:
+        name: test-results.xml
+        path: test-results.xml
+        target-path: test-results.xml
+
