--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,7 +22,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore    
     # run unit tests and save resutls as xml and  upload to github actions
     - name: Unit tests
-      run: dotnet test --configuration Release --no-restore --logger:"xunit;LogFilePath=./test-results.xml"
+      run: dotnet test --configuration Release --no-restore --logger:"xunit;LogFilePath=./../test-results.xml"
     - name: Upload test results
       uses: actions/upload-artifact@v1
       with:
