--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -4,36 +4,20 @@ on:
   push:
     branches: [ main, feature/* ]
     
-  # tests results path is the path to the folder where the test results are stored
-env:
-  - name: TEST_RESULTS_PATH
-    value: /tmp/test-results
- 
-
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
-       
-    - name: Install dotnet
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.0.x'    
+    # restore dependencies
     - name: Install dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore    
-# run unit tests, save results as xml into TEST_RESULTS_PATH, and upload them as artifacts
-    - name: Run unit tests
-      run: dotnet test --configuration Release --no-restore --logger:"xunit;LogFilePath=$TEST_RESULTS_PATH/test-results.xml"
-    #upload content of TEST_RESULTS_PATH as artifacts
-    - name: Upload test results
-      uses: actions/upload-artifact@v1
-      with:
-        name: test-results.xml
-        path: $TEST_RESULTS_PATH
-        target-path: test-results
+    # build application
+    - name: Build application
+      run: dotnet build
+      
+    
 
 
 
